Change registration endpoints so they match the PUT organisations approach - a registration will be created or updated via a single PUT endpoint
