# src/Api/Endpoints/Organisations/Registrations/Put.cs
@@ -9,10 +9,11 @@ public static class Put
     public static void MapRegistrationsPut(this IEndpointRouteBuilder app)
     {
         app.MapPut("/organisations/{id:guid}/registrations/{type}-{registrationYear:int}", Handle)
-            .WithName("UpdateRegistration")
+            .WithName("CreateOrUpdateRegistration")
             .WithTags("Registrations")
-            .WithSummary("Update an existing registration")
+            .WithSummary("Create or update a registration")
             .Produces<Registration>()
+            .Produces<Registration>(statusCode: StatusCodes.Status201Created)
             .ProducesProblem(StatusCodes.Status400BadRequest)
             .ProducesProblem(StatusCodes.Status500InternalServerError)
             .RequireAuthorization(PolicyNames.Write);
@@ -29,7 +30,8 @@ public static class Put
     {
         await Task.Yield();
 
-        return Results.Ok(
+        return Results.Created(
+            $"/organisations/{id}/registrations/{type}-{registrationYear}",
             new Registration
             {
                 Status = request.Status,
